0.2.4 ()
=====
* Call get_state when set_state returns an
  asynchronous state change to block until
  state has been changed. See: savonet/liquidsoap#483

0.2.3 (2017-04-11)
=====
* Added timeout to Bus.timed_pop_filtered.
* Added datetime tag support.

0.2.2 (2016-06-29)
=====
* Added Element.duration.
* Added App_src.push_buffer_data.
* Completed message types.

0.2.1 (2015-08-03)
=====
* Dummy github release.

0.2.0 (2013-02-19)
=====
* Complete rewrite to get rid of OCamlIDL, lots of modules added.

0.1.0 (2011-10-04)
=====
* Initial release.